<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="35sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/seed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:gravity="center"
                android:hint="@string/seed"
                android:inputType="phone" />

            <Button
                android:id="@+id/text_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_color" />

            <Button
                android:id="@+id/alive_cell_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alive_cell_color" />

            <Button
                android:id="@+id/dead_cell_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dead_cell_color" />

            <Button
                android:id="@+id/start_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>